# mcp-ops-ai-use-monitor

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README-production.md  README.md  docker-compose.yml  pyproject.toml  test_trace.py
.claude/: .mcp.json  settings.json
.claude/hooks/: debug_hook.py  send_usage.py  send_usage.sh
docs/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  SETUP_GUIDE.md
scripts/: admin_token.py  test_langfuse.py  test_langfuse_v2.py  test_trace.py  test_usage_tracer.py
src/: __init__.py  config.py  server.py  server_simple.py
src/auth/: token_verifier.py
src/langfuse/: __init__.py  tracer.py
src/models/: usage_data.py
src/tracing/: tracer.py
